--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Reform Company</title>
+    <title>Login - teste</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
