Add - Pagina Perfil

--- a/fornecedor.html
+++ b/fornecedor.html
@@ -38,7 +38,7 @@
                             <div id="title_form">
                                 <h1>Cadastro de Fornecedor</h1>
                             </div>
-                            <form id="form_cad" action="" method="post">
+                            <form id="form_cad" action="php/recebe_dados.php" method="post">
                                 <div id="f_div_1">
                                     <label for="f_nome">Nome/Razão Social</label><br>
                                     <input class="box_form" style="width: 280px;" type="text" name="f_nome" id="f_nome"
