--- a/consumidor.html
+++ b/consumidor.html
@@ -39,59 +39,59 @@
                             </div>
                             <form id="form_cad" action="" method="post">
                                 <div id="c_div_1">
-                                    <label for="c_nome">Nome Completo</label><br>
-                                    <input class="box_form" style="width: 280px;" type="text" name="c_nome" id="c_nome"
+                                    <label for="nome">Nome Completo</label><br>
+                                    <input class="box_form" style="width: 280px;" type="text" name="nome" id="nome"
                                         required><br>
 
-                                    <label for="c_cpf">CPF</label><br>
-                                    <input class="box_form2" type="text" name="c_cpf" id="c_cpf" required><br><br><br>
+                                    <label for="cpf">CPF</label><br>
+                                    <input class="box_form2" type="text" name="cpf" id="cpf" required><br><br><br>
 
-                                    <label for="c_email">Email</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="c_email"
-                                        id="c_email" required><br>
+                                    <label for="email">Email</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="email"
+                                        id="email" required><br>
 
-                                    <label for="c_password1">Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="c_password1"
-                                        id="c_password1" required><br>
+                                    <label for="password1">Senha</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password1"
+                                        id="password1" required><br>
 
-                                    <label for="c_password2">Repita sua Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="c_password2"
-                                        id="c_password2" required><br>
+                                    <label for="password2">Repita sua Senha</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password2"
+                                        id="password2" required><br>
                                 </div>
 
                                 <div id="c_div_2">
-                                    <label for="c_tel_1">Telefone 01</label><br>
-                                    <input class="box_form2" type="text" name="c_tel_01" id="c_tel_01" required><br>
+                                    <label for="tel_1">Telefone 01</label><br>
+                                    <input class="box_form2" type="text" name="tel_01" id="tel_01" required><br>
 
-                                    <label for="c_tel_02">Telefone 02</label><br>
-                                    <input class="box_form2" type="text" name="c_tel_02" id="c_tel_02"><br>
+                                    <label for="tel_02">Telefone 02</label><br>
+                                    <input class="box_form2" type="text" name="tel_02" id="tel_02"><br>
 
                                 </div>
                                 <div id="c_div_3">
-                                    <label for="c_cep">CEP</label><br>
-                                    <input class="box_form2" type="text" name="c_cep" id="c_cep" required><br>
+                                    <label for="cep">CEP</label><br>
+                                    <input class="box_form2" type="text" name="cep" id="cep" required><br>
 
-                                    <label for="c_num">Número</label><br>
-                                    <input class="box_form2" type="text" name="c_num" id="c_num" required><br>
+                                    <label for="num">Número</label><br>
+                                    <input class="box_form2" type="text" name="num" id="num" required><br>
 
-                                    <label for="c_comp">Complemento</label><br>
-                                    <input class="box_form2" type="text" name="c_comp" id="c_comp"><br><br>
+                                    <label for="comp">Complemento</label><br>
+                                    <input class="box_form2" type="text" name="comp" id="comp"><br><br>
 
-                                    <label for="c_foto">Carregar uma foto:</label>
-                                    <input type="file" id="c_foto" name="c_foto" accept="image/png, image/jpeg">
+                                    <label for="foto">Carregar uma foto:</label>
+                                    <input type="file" id="foto" name="foto" accept="image/png, image/jpeg">
                                 </div>
 
                                 <div id="c_div_4">
-                                    <label for="c_bairro">Bairro</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="c_bairro"
-                                        id="c_bairro"><br>
+                                    <label for="bairro">Bairro</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="bairro"
+                                        id="bairro"><br>
 
-                                    <label for="c_cidade">Cidade</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="c_cidade"
-                                        id="c_cidade"><br>
+                                    <label for="cidade">Cidade</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="cidade"
+                                        id="cidade"><br>
 
-                                    <label for="c_estado">Estado</label><br>
-                                    <input class="box_form2" type="text" name="c_estado" id="c_estado">
+                                    <label for="estado">Estado</label><br>
+                                    <input class="box_form2" type="text" name="estado" id="estado">
                                 </div>
                                 <div id="c_div_5">
                                     <button style="height: 50px; width: 100px; border: solid 1px #b8b6b6;"
