--- a/fornecedor.html
+++ b/fornecedor.html
@@ -40,14 +40,14 @@
                             </div>
                             <form id="form_cad" action="php/recebe_dados.php" method="post">
                                 <div id="f_div_1">
-                                    <label for="f_nome">Nome/Razão Social</label><br>
-                                    <input class="box_form" style="width: 280px;" type="text" name="f_nome" id="f_nome"
+                                    <label for="nome">Nome/Razão Social</label><br>
+                                    <input class="box_form" style="width: 280px;" type="text" name="nome" id="nome"
                                         required><br>
 
-                                    <label for="f_cpf_cnpj">CPF/CNPJ</label><br>
-                                    <input class="box_form2" type="text" name="f_cpf_cnpj" id="f_cpf_cnpj" required><br>
+                                    <label for="cpf_cnpj">CPF/CNPJ</label><br>
+                                    <input class="box_form2" type="text" name="cpf_cnpj" id="cpf_cnpj" required><br>
 
-                                    <label for="f_especialidade">Especialidade</label><br>
+                                    <label for="especialidade">Especialidade</label><br>
                                     <div style="float: left;">
                                         <div>
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1"
@@ -83,55 +83,55 @@
                                         </div>
                                     </div><br><br><br><br><br><br><br>
 
-                                    <label for="f_descricao">Descrição</label><br>
+                                    <label for="descricao">Descrição</label><br>
                                     <input class="box_form" style="height: 70px; width: 700px;" type="text"
-                                        name="f_descricao" id="f_descricao" required><br>
+                                        name="descricao" id="descricao" required><br>
                                 </div>
 
                                 <div id="f_div_2">
-                                    <label for="f_tel_1">Telefone 01</label><br>
-                                    <input class="box_form2" type="text" name="f_tel_01" id="f_tel_01" required><br>
+                                    <label for="tel_1">Telefone 01</label><br>
+                                    <input class="box_form2" type="text" name="tel_01" id="tel_01" required><br>
 
-                                    <label for="f_tel_02">Telefone 02</label><br>
-                                    <input class="box_form2" type="text" name="f_tel_02" id="f_tel_02"><br>
+                                    <label for="tel_02">Telefone 02</label><br>
+                                    <input class="box_form2" type="text" name="tel_02" id="tel_02"><br>
 
-                                    <label for="f_email">Email</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="f_email"
-                                        id="f_email" required><br>
+                                    <label for="email">Email</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="email"
+                                        id="email" required><br>
 
-                                    <label for="f_password1">Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="f_password1"
-                                        id="f_password1" required><br>
+                                    <label for="password1">Senha</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password1"
+                                        id="password1" required><br>
 
-                                    <label for="f_password2">Repita sua Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="f_password2"
-                                        id="f_password2" required><br>
+                                    <label for="password2">Repita sua Senha</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password2"
+                                        id="password2" required><br>
                                 </div>
                                 <div id="f_div_3">
-                                    <label for="f_cep">CEP</label><br>
-                                    <input class="box_form2" type="text" name="f_cep" id="f_cep" required><br>
+                                    <label for="cep">CEP</label><br>
+                                    <input class="box_form2" type="text" name="cep" id="cep" required><br>
 
-                                    <label for="f_num">Número</label><br>
-                                    <input class="box_form2" type="text" name="f_num" id="f_num" required><br>
+                                    <label for="num">Número</label><br>
+                                    <input class="box_form2" type="text" name="num" id="num" required><br>
 
-                                    <label for="f_comp">Complemento</label><br>
-                                    <input class="box_form2" type="text" name="f_comp" id="f_comp"><br>
+                                    <label for="comp">Complemento</label><br>
+                                    <input class="box_form2" type="text" name="comp" id="comp"><br>
 
-                                    <label for="f_foto">Carregar uma foto:</label>
-                                    <input type="file" id="f_foto" name="f_foto" accept="image/png, image/jpeg">
+                                    <label for="foto">Carregar uma foto:</label>
+                                    <input type="file" id="foto" name="foto" accept="image/png, image/jpeg">
                                 </div>
 
                                 <div id="f_div_4">
-                                    <label for="f_bairro">Bairro</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="f_bairro"
-                                        id="f_bairro"><br>
+                                    <label for="bairro">Bairro</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="bairro"
+                                        id="bairro"><br>
 
-                                    <label for="f_cidade">Cidade</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="f_cidade"
-                                        id="f_cidade"><br>
+                                    <label for="cidade">Cidade</label><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="cidade"
+                                        id="cidade"><br>
 
-                                    <label for="f_estado">Estado</label><br>
-                                    <input class="box_form2" type="text" name="f_estado" id="f_estado">
+                                    <label for="estado">Estado</label><br>
+                                    <input class="box_form2" type="text" name="estado" id="estado">
                                 </div>
                                 <div id="f_div_5">
                                     <button style="height: 50px; width: 100px; border: solid 1px #b8b6b6;"
