correcao nome pagina index

--- a/consumidor.html
+++ b/consumidor.html
@@ -12,12 +12,12 @@
     <header id="cab_profile">
         <nav>
             <div class="cabecalho">
-                <a href="Paginainicial.html">
+                <a href="index.html">
                     <img src="img/image1.png">
                 </a>
             </div>
             <div class="topnav">
-                <a href="Paginainicial.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a class="active" href="consumidor.html">Cadastro Consumidor</a>
                 <a href="servicos.html">Serviços</a>
