--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/paginaInicial.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 
 </head>
 
@@ -12,12 +12,12 @@
     <header id="cab_profile">
         <nav>
             <div class="cabecalho">
-                <a href="Paginainicial.html">
+                <a href="index.html">
                     <img src="img/image1.png">
                 </a>
             </div>
             <div class="topnav">
-                <a class="active" href="Paginainicial.html">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
                 <a href="servicos.html">Serviços</a>
