--- a/perfil.html
+++ b/perfil.html
@@ -13,12 +13,12 @@
     <header id="cab_profile">
         <nav>
             <div class="cabecalho">
-                <a href="Paginainicial.html">
+                <a href="index.html">
                     <img src="img/image1.png">
                 </a>
             </div>
             <div class="topnav">
-                <a href="Paginainicial.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
                 <a href="servicos.html">Serviços</a>
@@ -55,16 +55,16 @@
             </div>
             <div id="sec_div02">
                 <div id="sec_div02_title">
-                    <h3 id="title00">Alterar Perfil</h3>
+                    <h3 id="title00">Perfil</h3>
                 </div>
                 <div id="sec_div02_article">
-                    <div style="width: 40%; height: 100%; float: left; margin: 20px 0px 0px 20px; ">
+                    <div style="width: 40%; height: 100%; float: left; margin: 20px 0px 0px 0px; ">
                         <div
-                            style="width: 100%; height: 40%; background-color: white; border-radius: 5px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
+                            style="width: 100%; height: 50%; background-color: white; border-radius: 5px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
                             <div
-                                style="width: 100%; height: 20%; float: left; background-color: rgb(230, 235, 245);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3;">
+                                style="width: 100%; height: 45px; float: left; background-color: rgb(230, 235, 245);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3;">
                                 <h5
-                                    style="margin: 15px; color: blue; font-size: 16PX; text-shadow: rgb(129, 129, 129) 1px 0 2px;">
+                                    style="margin: 15px; color: blue; font-size: 16PX; text-shadow: rgb(129, 129, 129) 1px 0 2px; text-align: center;">
                                     Informações Atuais de Login</h5>
                             </div>
                             <div style="width: 100%; height: 80%; float: left; margin: 10px 0px 0px 5px;">
@@ -92,11 +92,11 @@
                             </div>
                         </div>
                         <div
-                            style="width: 100%; height: 35%; background-color: white; border-radius: 5px; margin-top: 10px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
+                            style="width: 100%; height: 50%; background-color: white; border-radius: 5px; margin-top: 10px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
                             <div
-                                style="width: 100%; height: 20%; float: left; background-color: rgb(230, 235, 245);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3; margin-top: -1px;">
+                                style="width: 100%; height: 45px; float: left; background-color: rgb(230, 235, 245);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3; margin-top: -1px;">
                                 <h5
-                                    style="margin: 10px; color: blue; font-size: 16px; text-shadow: rgb(129, 129, 129) 1px 0 2px;">
+                                    style="margin: 10px; color: blue; font-size: 16px; text-shadow: rgb(129, 129, 129) 1px 0 2px; text-align: center;">
                                     Informações Atuais de Endereço</h5>
                             </div>
                             <div style="width: 100%; height: 80%; float: left; margin: 10px 0px 0px 5px;">
@@ -124,20 +124,55 @@
                             </div>
                         </div>
                     </div>
-                    <div style="background-color: rgb(122, 196, 171); width: 55%; height: 100%; float: right;">
+                    <div style="width: 55%; height: 100%; float: right;">
                         <div
-                            style="width: 100%; height: 60%; background-color: white; border-radius: 5px; margin-top: 10px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
+                            style="width: 100%; height: 630px; background-color: white; border-radius: 5px; margin-top: 10px; box-shadow: 3px 3px 3px rgb(201, 201, 201);">
                             <div
-                                style="width: 100%; height: 45px; float: left; background-color: rgb(230, 235, 245);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3; margin-top: -1px;">
+                                style="width: 100%; height: 45px; float: left; background-color: rgb(202, 240, 202);border-radius: 5px 5px 0px 0px; border-bottom: solid 1px #d3d3d3; margin-top: -1px;">
                                 <h5
-                                    style="margin: 10px; color: blue; font-size: 16px; text-shadow: rgb(129, 129, 129) 1px 0 2px;">
-                                    Informações Atuais de Endereço</h5>
+                                    style="margin: 10px; color: rgb(0, 0, 0); font-size: 16px; text-shadow: rgb(129, 129, 129) 1px 0 2px; text-align: center;">
+                                    Atualizar Dados Cadastrados</h5>
                             </div>
                             <div style="width: 100%; height: 80%; float: left; margin: 10px 0px 0px 5px;">
                                 <form>
+                                    <label for="">Nome</label><br>
+                                    <input type="text" name="nome" id="nome"><br>
+                                    <label for="">Data de Nascimento</label><br>
+                                    <input type="date" name="data" id="data" placeholder="dd-mm-aaaa"><br>
+                                    <label for="">Sexo</label><br>
+                                    <input class="changeWidth" type="radio" id="sexo" name="sexo" value="masculino">
+                                    <label for="masculino">Masculino</label>
+                                    <input class="changeWidth" type="radio" id="sexo" name="sexo" value="feminino">
+                                    <label for="feminino">Feminino</label><br>
+                                    <label for="">RG</label><br>
+                                    <input type="text" name="rg" id="rg"><br>
+                                    <label for="">CPF</label><br>
+                                    <input type="text" name="cpf" id="cpf"><br>
                                     <label for="">Email</label><br>
-                                    <input type="email" name="email" id="email" placeholder="user@example.com">
-                                    
+                                    <input type="email" name="email" id="email" placeholder="user@example.com"><br><br>
+
+                                    <fieldset>
+                                        <legend>Dados de Endereço:</legend>
+                                        <div id="fieldset_A">
+                                            <label for="rua">Rua:</label>
+                                            <input type="text" id="rua" name="rua"><br>
+                                            <label for="numero">Número:</label>
+                                            <input type="text" id="numero" name="numero"><br>
+                                            <label for="complemento">Complemento:</label>
+                                            <input type="text" id="complemento" name="complemento"><br>
+                                        </div>
+                                        <div id="fieldset_B">
+                                            <label for="cep">CEP:</label>
+                                            <input type="text" id="cep" name="cep"><br>
+                                            <label for="cidade">Cidade:</label>
+                                            <input type="text" id="cidade" name="cidade"><br>
+                                            <label for="estado">Estado:</label>
+                                            <input type="text" id="estado" name="estado"><br>
+                                        </div>
+                                    </fieldset> <br>
+                                    <input class="submit" type="submit" value="Enviar">
+
+
                                 </form>
                             </div>
                         </div>
