--- a/consumidor.html
+++ b/consumidor.html
@@ -37,7 +37,7 @@
                             <div id="title_form">
                                 <h1>Cadastro de Consumidor</h1>
                             </div>
-                            <form id="form_cad" action="" method="post">
+                            <form id="form_cad" action="php/conexao_consumidor.php" method="post">
                                 <div id="c_div_1">
                                     <label for="nome">Nome Completo</label><br>
                                     <input class="box_form" style="width: 280px;" type="text" name="nome" id="nome"
