add perfil fornecedor

--- a/perfil.html
+++ b/perfil.html
@@ -47,7 +47,7 @@
                         </tr>
                         <tr>
                             <td><i class="fa fas fa-user-times" aria-hidden="true"></i></td>
-                            <td><a href="paginaInicial.html">Logout</a></td>
+                            <td><a href="index.html">Logout</a></td>
                         </tr>
                     </table>
 
@@ -121,8 +121,9 @@
                                     <td>80050-254</td>
                                     </tr>
                                 </table>
-                            </div>
+                            </div>                            
                         </div>
+                        
                     </div>
                     <div style="width: 55%; height: 100%; float: right;">
                         <div
